wyrzucenie tokenow ze spisu usosow, dodanie title keywords do strony glownej.

--- a/web/static/templates/home.html
+++ b/web/static/templates/home.html
@@ -9,10 +9,8 @@
   <div class="row">
     <div class="col-xs-12 col-md-4">
       <h2>Dane z USOSa</h2>
-      <p>Dzięki temu że Twoja uczelnia udostępniła USOSa i pozwoliła na integrację w kujonie masz możliwość
-        przeglądania swoich przedmiotów, ocen, kontaktu do swoich nauczycieli a także planu zajęć. Wraz z rozwojem
-        kujona będziemy starać sie dodawać nowe funkcjonalności, aby kujon był Twoim ulubionym programem do wymianany
-        informacji z uczelnią..
+      <p>Dzięki dostępowi do USOSa masz możliwość przeglądania swoich przedmiotów, ocen, kontaktu do nauczycieli a także planu zajęć.
+        Jeżeli uważasz że przydadzą Ci się dodatkowe informacje - napisz do nas :)
       </p>
     </div>
     <div class="col-xs-12 col-md-4">
@@ -23,13 +21,14 @@
       </p>
     </div>
     <div class="col-xs-12 col-md-4">
-      <h2>Integracja z FB</h2>
-      <p>Poprzez integrację z Twoim kontem na Facebooku już niedługo będziesz mógł zapisać się na grupę związaną z
-        Twoimi zajęciami i rozmawiać ze znajomymi z jednej grupy. Kujon pomoże połączyć Ci kontakty z uczelni z
+      <h2>Integracja z Facebook</h2>
+      <p>Poprzez integrację z Twoim kontem na Facebooku już niedługo będziesz mógł połączyć grupę z
+        uczelni z grupą na facebooku i rozmawiać ze znajomymi z jednej grupy. Kujon pomoże też połączyć Ci kontakty z uczelni z
       tymi z facebooka.
+      </p>
       <button class="btn btn-primary" href="https://facebook.com/kujon.mobi"><i class="fa fa-thumbs-up">
         Polub Kujona!</i> </button>
-      </p>
+
     </div>
   </div>
 </div>
