--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -4,9 +4,17 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Kujon - studencka wymiana wiedzy</h2>
-                <p class="lead">Kujon to system pozwalający na przeglądanie danych USOS na smartphonie, wymianę danych
-                    oraz komunikację. Integrujemy się z Facebookiem oraz z największymi polskimi uczelniami.</p>
+                <h2 class="page-header">Kujon - mobilny dostęp do Uczelni i USOSa</h2>
+                <p class="lead">Najlepszy dostęp do danych Twojej uczelni oraz USOSa poprzez Twojego smartphona. Dzięki
+                    kujonowi możesz na swoim telefonie przeglądać plan zajęć, przedmioty i oceny a także znajomych
+                    studentów których poznałeś w trakcie studiów.
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="page-header">Dzięki integracji z USOSem obsługujemy największe 25 uczelni w kraju.. </h2>
             </div>
         </div>
 
@@ -26,7 +34,8 @@
 
             <div class="inner cover ">
                 <h2 class="cover-heading">Pobierz wersję mobilną</h2>
-                <p class="lead">Z {{PROJECT_TITLE}} możesz korzystać na spartfonie i w dowolnej przeglądarce.</p>
+                <p class="lead">Z kujona możesz korzystać na smartfonie i w dowolnej przeglądarce. W tej chwili
+                obsługujemy aplikacje mobilną na platformę Android. Zobacz jak wyglądają dane z USOSa na Twoim telefonie.</p>
             </div>
 
 
