--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -4,7 +4,7 @@
     <div class="alert alert-danger alert-dismissible fade in" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
         </button>
-        <h4>Oh snap!</h4>
+        <h4>Ups..</h4>
         <p>{{MESSAGE}}</p>
     </div>
 </div>
