--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{PROJECT_TITLE}}</title>
-
+    <title>Kujon - mobilny dostęp do uczelni i USOSa</title>
+    <meta name="description" content="Kujon - mobilny dostęp do Uczelni i USOSa">
+    <meta name="keywords" content="kujon, kujon.mobi, klient USOS, klient USOSweb, usosweb na smartphone, USOS na komórkę">
     <link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="/static/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet">
