--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -30,6 +30,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="#terms">Cykle</a></li>
                         <li><a href="#programmes">Kierunki</a></li>
+                        <li><a href="#faculties">Jednostki</a></li>
                     </ul>
                 </li>
                 {{/if}}
