--- a/web/static/templates/programmes.html
+++ b/web/static/templates/programmes.html
@@ -5,7 +5,7 @@
     <div class="panel-body">
         <table id="terms-table" class="table table-hover table-responsive">
             <thead>
-            <th>Nazwa</th>
+            <th>Opis</th>
             <th>Numer</th>
             <th>Poziom</th>
             <th>Tryb</th>
