remove usos references

--- a/web/static/templates/disclaimer.html
+++ b/web/static/templates/disclaimer.html
@@ -39,9 +39,9 @@
                         </ol>
                         <h2>II. ŚWIADCZONE USŁUGI</h2>
                         <ol>
-                            <li>Kujon umożliwia mobieranie danych z USOS dla użytkowników którzy mają konto w USOS.
+                            <li>Kujon umożliwia mobieranie danych z studenckich.
                                 Korzystanie z API usos i Kujon musi spełniać wymagania i regulaminy korzytania z
-                                aplikacji USOS.
+                                aplikacji studenckiej.
                             </li>
                             </li>
                             <li>Kujon jest dostępny na urządzenia mobilne (smartfony), spełniające następujące
