--- a/web/static/templates/home.html
+++ b/web/static/templates/home.html
@@ -4,12 +4,12 @@
 
   <div class="jumbotron">
     <h1>Witamy w kujonie!</h1>
-    <p>Dziękujemy za rejestrację, masz teraz podgląd do swoich danych w USOS.</p>
+    <p>Dziękujemy za rejestrację, masz teraz podgląd do swoich danych studenckich.</p>
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-4">
-      <h2>Dane z USOSa</h2>
-      <p>Dzięki dostępowi do USOSa masz możliwość przeglądania swoich przedmiotów, ocen, kontaktu do nauczycieli a także planu zajęć.
+      <h2>Dane studenckie</h2>
+      <p>Masz możliwość przeglądania swoich przedmiotów, ocen, kontaktu do nauczycieli a także planu zajęć.
         Jeżeli uważasz że przydadzą Ci się dodatkowe informacje - napisz do nas :)
       </p>
     </div>
