--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -4,8 +4,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Kujon - mobilny dostęp do Uczelni i USOSa</h2>
-                <p class="lead">Najlepszy dostęp do danych Twojej uczelni oraz USOSa poprzez Twojego smartphona. Dzięki
+                <h2 class="page-header">Kujon - mobilny dostęp danych studenckich</h2>
+                <p class="lead">Najlepszy dostęp do Twoich studenckich danych poprzez Twojego smartphona. Dzięki
                     kujonowi możesz na swoim telefonie przeglądać plan zajęć, przedmioty i oceny a także znajomych
                     studentów których poznałeś w trakcie studiów.
                 </p>
@@ -14,7 +14,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Dzięki integracji z USOSem obsługujemy największe 25 uczelni w kraju.. </h2>
+                <h2 class="page-header">Integrujemy się z największymi uczelniami w kraju.</h2>
             </div>
         </div>
 
