--- a/web/static/templates/register.html
+++ b/web/static/templates/register.html
@@ -3,7 +3,7 @@
     <div class="row">
 
         <div class="col-lg-12">
-            <h3 class="page-header">Aby móc pracować w kujonie - wybierz uczelnie na której masz konto w USOS,
+            <h3 class="page-header">Aby móc pracować w kujonie - wybierz uczelnie na której masz konto,
                 przekierujemy Cię abyś sie zalogował.</h3>
         </div>
 
