--- a/web/static/templates/user.html
+++ b/web/static/templates/user.html
@@ -50,7 +50,7 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td>USOS</td>
+                        <td>Uczelnia</td>
                         <td>{{usos_name}}</td>
                     </tr>
                     <tr>
