remove usos references

--- a/web/static/templates/disclaimer.html
+++ b/web/static/templates/disclaimer.html
@@ -40,7 +40,7 @@
                         <h2>II. ŚWIADCZONE USŁUGI</h2>
                         <ol>
                             <li>Kujon umożliwia mobieranie danych z studenckich.
-                                Korzystanie z API usos i Kujon musi spełniać wymagania i regulaminy korzytania z
+                                Korzystanie z API i Kujon musi spełniać wymagania i regulaminy korzytania z
                                 aplikacji studenckiej.
                             </li>
                             </li>
