--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -35,7 +35,8 @@
             <div class="inner cover ">
                 <h2 class="cover-heading">Pobierz wersję mobilną</h2>
                 <p class="lead">Z kujona możesz korzystać na smartfonie i w dowolnej przeglądarce. W tej chwili
-                obsługujemy aplikacje mobilną na platformę Android. Zobacz jak wyglądają dane z USOSa na Twoim telefonie.</p>
+                    obsługujemy aplikacje mobilną na platformę Android. Zobacz jak wyglądają dane studenckie na
+                    telefonie.</p>
             </div>
 
 
