--- a/web/static/templates/user.html
+++ b/web/static/templates/user.html
@@ -42,7 +42,7 @@
                 </a>
             </div>
             <div class="col-xs-10">
-                <h3 class="media-heading">Informacje z USOS</h3>
+                <h3 class="media-heading">Informacje studenckie</h3>
                 <table class="table table-hover table-responsive">
                     <thead>
                     <th></th>
