disclaimer fix, new logos and footer.

--- a/web/static/templates/disclaimer.html
+++ b/web/static/templates/disclaimer.html
@@ -6,18 +6,18 @@
                     <h1>Warunki użytkowania i polityka prywatności</h1>
                     <div class="entry">
 
-                        <p>Witamy w kujon od ........ Sp. z o.o., z siedzibą w Warszawie (..-..), Polsce,
-                            przy ul. ....., KRS: ......., NIP: ,........., (“<strong>Firma</strong>” lub
-                            “<strong>My</strong>”).</p>
+                        <p>Witamy w Kujon udostępniony przez firmę Marao z siedzibą w Warszawie ul. Dickensa 31a/21,
+                            REGON: 142968125, NIP: 1132027580 (“Operator” lub
+                            “My”).</p>
 
-                        <p>Korzystając z aplikacji Kujon lub strony internetowej pod adresem kujon.mobi (wspólnie
-                            jako “<strong>Kujon</strong>” lub “<strong>Aplikacja</strong>”) zgadzasz się na warunki
-                            zawarte w Regulaminie (“<strong>Umowa</strong>”). Powinieneś także zapoznać się z <strong>Polityką
-                                Prywatności</strong>, odwołanie do której znajdziesz w niniejszej
-                            <strong>Umowie</strong>. Jeśli nie zgadzasz się ze wszystkimi zasadami zawartymi w
-                            niniejszej <strong>Umowie</strong>, łącznie z <strong>Polityką Prywatności</strong>,
+                        <p>Korzystając z aplikacji Kujon lub strony internetowej pod adresem Kujon.mobi (wspólnie
+                            jako “Kujon” lub “Aplikacja”) zgadzasz się na warunki
+                            zawarte w Regulaminie (“Umowa”). Powinieneś także zapoznać się z Polityką
+                                Prywatności, odwołanie do której znajdziesz w niniejszej
+                            Umowie. Jeśli nie zgadzasz się ze wszystkimi zasadami zawartymi w
+                            niniejszej Umowie, łącznie z Polityką Prywatności,
                             prosimy o zaprzestanie korzystania z aplikacji. Prosimy o kontakt w przypadku pytań
-                            związanych z niniejszą <strong>Umową</strong>.</p>
+                            związanych z niniejszą Umową.</p>
                         <h2>I. POSTANOWIENIA OGÓLNE</h2>
                         <ol>
                             <li>Niniejsza Umowa (łącznie z Polityką Prywatności) spełnia wymagania Ustawy o świadczeniu
@@ -55,7 +55,7 @@
                                 innymi ogólnymi zasadami życia społecznego. W szczególności jesteś zobowiązany do:
                                 <ol style="list-style-type: lower-latin;">
                                     <li>Korzystania z Kujon w sposób nieutrudniający korzystania z aplikacji innym
-                                        użytkownikom lub Firmie,
+                                        użytkownikom lub Operatorowi,
                                     </li>
                                     <li>Korzystania z Kujon w sposób niezakłócający funkcjonowania aplikacji,</li>
                                     <li>Korzystania z Kujon oraz innych udostępnionych materiałów w celach zgodnych z
@@ -65,11 +65,11 @@
                             </li>
                             <li>Nie ma tolerancji dla niewłaściwych, szkodliwych treści.</li>
                             <li>W przypadku napotkania jakichkolwiek przypadków łamania powyższych zasad, powinieneś
-                                natychmiast poinformować Firmę wysyłając e-mail na adres <a
+                                natychmiast poinformować Operatora wysyłając e-mail na adres <a
                                         href="mailto:kujon@kujon.mobi">kujon@kujon.mobi</a>.
                             </li>
                             <li>W przypadku zgłoszenia niewłaściwych lub szkodliwych treści (a także innych naruszeń
-                                Regulaminu) podejmiemy reakcję w ciągu 24 godzin. Reakcja może skutkować usunięciem
+                                Regulaminu) podejmiemy reakcję niezwłocznie. Reakcja może skutkować usunięciem
                                 niewłaściwych treści oraz usunięciem konta użytkownika, który te treści dodał.
                             </li>
                             <li>Korzystanie z aplikacji jest darmowe.</li>
@@ -119,11 +119,22 @@
                             <li>Możesz korzystać z Kujon tylko w celach prywatnych.</li>
                             <li>Kujon, jak również wszelkie dotyczące go dane i informacje, wliczając w to teksty,
                                 rozwiązania nawigacyjne (techniczne), loga, element graficzne etc. stanowią własność
-                                Firmy lub podmiotów trzecich, zgodnie z ustawą o Prawie Autorskim z of 1994.
+                                Operatora lub podmiotów trzecich, zgodnie z ustawą o Prawie Autorskim z of 1994.
                             </li>
-                            <li>Gdy zaczynasz korzystać z Kujon, Firma udziela Ci licencji na korzystanie z Kujon na
+                            <li>Gdy zaczynasz korzystać z Kujon, Operator udziela Ci licencji na korzystanie z Kujon na
                                 Twoim urządzeniu mobilnym. Nie masz wyłącznego prawa do korzystania z tej licencji, jak
                                 również nie masz prawa do jej przenoszenia ani dysponowania nią.
+                            </li>
+                            <li>Kujon jest zintegrowany z USOS czyli Uniwersyteckim Systemem Obsługi Studiów, którego
+                                właścicielem jest Międzyuniwersyteckie Centrum ds. Informatyzacji
+                                (<a href="http://muci.edu.pl/">MUCI</a>). Więcej informacji o USOS możesz znaleźć na
+                                stronie <a href="https://www.usos.edu.pl/">www.usos.edu.pl</a>
+                                lub na stronie swojej uczelni. Pamiętaj o przestrzeganiu regulaminu korzystania z USOS.
+                            </li>
+                            <li>Kujon integruje się także z portalami Facebook i Google których prawa intelektualne należą
+                                do właścicieli tych portali. Regulamin i zasady obowiązujęce na Facebook są dostępne pod
+                                adresem <a href="https://pl-pl.facebook.com/policies/">pl-pl.facebook.com/policies</a>
+                                a Prywatność i warunki Gogole możesz przeczytać na stronie <a href="https://www.google.com/intl/pl/policies/">google.com/intl/pl/policies</a>.
                             </li>
                         </ol>
                         <h2>VI. ODPOWIEDZIALNOŚĆ </h2>
@@ -157,19 +168,18 @@
 
                         <div class="entry">
 
-                            <p>Kujon (“Challange”, “my” lub “Firma”) szanuje prywatność swoich
-                                użytkowników (“ty”), czego przykład stanowi niniejsza Polityka Prywatności, opracowana
+                            <p>Kujon ("Operator") szanuje prywatność swoich
+                                użytkowników, czego przykład stanowi niniejsza Polityka Prywatności, opracowana
                                 by okazać oddanie ochronie twoich prywatnych danych. Niniejsza Polityka Prywatności
                                 przedstawia, zgodnie z wymaganiami Ustawy o Ochronie Danych Osobowych z 1997 r.
                                 (“Ustawa”), informacje, które są przez nas pozyskiwane, sposób ich użycia oraz podmioty,
                                 którym zostają one udostępniane. Zachęcamy do zapoznania się z niniejszą Polityką
                                 Prywatności. Poprzez korzystanie z naszej strony lub Aplikacji (nasz “Serwis”), wyrażasz
                                 akceptację praktyk zawartych w niniejszej Polityce Prywatności.</p>
-                            <ol>
-                                <li>Administratorem danych, zgodnie z określeniem Ustawy jest ..... Sp. z
-                                    o.o., spółka zarejestrowana w Polsce i podlegająca jej prawom, z siedzibą w
-                                    Warszawie (.....), przy ul. ...., KRS: ...., NIP: .....
-                                    (“Administrator”).
+                                <li>Administratorem danych, zgodnie z określeniem Ustawy jest firma Marao zarejestrowana
+                                    w
+                                    Polsce i podlegająca jej prawom, z siedzibą w Warszawie ul. Dickensa 31a/21,
+                                    REGON: 142968125, NIP: 1132027580 (“Administrator”).
                                 </li>
                                 <li>Dane osobiste są przetwarzane przez Administratora w celu zapewnienia możliwości
                                     pełnego korzystania z funkcjonalności Kujon oraz weryfikacji wieku użytkownika.
@@ -187,11 +197,10 @@
                                         </li>
                                     </ol>
                                 </li>
-                                <li>Dane osobiste pozyskiwane przez Administratora zawierają:
+                                <li>Dane osobiste pozyskiwane przez Administratora zawierają między innymi:
                                     <ol style="list-style-type:lower-latin">
                                         <li>Adres email (opcjonalnie)</li>
                                         <li>Login oraz nazwa użytkownika w aplikacji</li>
-                                        <li>Data urodzenia (w celu weryfikacji wieku)</li>
                                         <li>Zdjęcia (opcjonalnie)</li>
                                         <li>Lokalizacja użytkownika</li>
                                         <li>Płeć (opcjonalnie)</li>
@@ -219,26 +228,61 @@
                                     adresy email.
                                 </li>
                                 <li><p>Dane, które udostępniasz</p>
-                                    <p>Możemy pozyskiwać i gromadzić zdjęcia i obrazy, które ustawiasz jako zdjęcie profilowe.
-                                Możesz również dostarczyć informację dotyczącą twojej płci.<br>Jeśli za pośrednictwem
-                                Aplikacji prowadzisz konwersacje z innymi użytkownikami.<br>Ograniczamy
-                                grupę odbiorców naszych Serwisów do osób, które ukończyły co najmniej 18 lat. Świadomie
-                                nie pozyskujemy, nie przetwarzamy ani nie używamy informacji dostarczonych przez
-                                użytkowników, którzy nie ukończyli 18 roku życia.</p>
-                                 <p>Niniejsza Polityka Prywatności może zostać zaktualizowana. W momencie dokonania
-                                aktualizacji Polityki Prywatności, umieścimy jej najnowszą wersję wraz z datą
-                                wprowadzenia zmian na górze podstrony „Polityka Prywatności” w ramach naszego Serwisu.
-                                Zalecamy okazjonalne sprawdzanie naszych Serwisów, w celu zapoznania się ze zmianami w
-                                naszej Polityce Prywatności etc.</p>
+                                    <p>Możemy pozyskiwać i gromadzić zdjęcia i obrazy, które ustawiasz jako zdjęcie
+                                        profilowe.
+                                        Możesz również dostarczyć informację dotyczącą twojej płci.<br>Jeśli za
+                                        pośrednictwem
+                                        Aplikacji prowadzisz konwersacje z innymi użytkownikami.<br>Ograniczamy
+                                        grupę odbiorców naszych Serwisów do osób, które ukończyły co najmniej 18 lat.
+                                        Świadomie
+                                        nie pozyskujemy, nie przetwarzamy ani nie używamy informacji dostarczonych przez
+                                        użytkowników, którzy nie ukończyli 18 roku życia.</p>
+                                    <p>Niniejsza Polityka Prywatności może zostać zaktualizowana. W momencie dokonania
+                                        aktualizacji Polityki Prywatności, umieścimy jej najnowszą wersję wraz z datą
+                                        wprowadzenia zmian na górze podstrony „Polityka Prywatności” w ramach naszego
+                                        Serwisu.
+                                        Zalecamy okazjonalne sprawdzanie naszych Serwisów, w celu zapoznania się ze
+                                        zmianami w
+                                        naszej Polityce Prywatności etc.</p>
                                 </li>
-
+                                <li>
+                                Serwis nie zbiera w sposób automatyczny żadnych informacji, z wyjątkiem informacji zawartych
+                                    w plikach cookies. Pliki cookies (tzw. „ciasteczka”) stanowią dane informatyczne, w szczególności pliki
+                                tekstowe, które przechowywane są w urządzeniu końcowym Użytkownika Kujona i
+                                przeznaczone są do korzystania ze stron internetowych Serwisu. Cookies zazwyczaj
+                                zawierają nazwę strony internetowej, z której pochodzą, czas przechowywania ich na
+                                urządzeniu końcowym oraz unikalny numer.
+                                </li>
+                                <li>Pliki cookies wykorzystywane są w celu:
+                                dostosowania zawartości stron internetowych Serwisu do preferencji Użytkownika oraz
+                                optymalizacji korzystania ze stron internetowych; w szczególności pliki te pozwalają
+                                rozpoznać urządzenie Użytkownika Serwisu i odpowiednio wyświetlić stronę internetową,
+                                dostosowaną do jego indywidualnych potrzeb;
+                                tworzenia statystyk, które pomagają zrozumieć, w jaki sposób Użytkownicy Serwisu
+                                korzystają ze stron internetowych, co umożliwia ulepszanie ich struktury i zawartości;
+                                utrzymanie sesji Użytkownika Serwisu (po zalogowaniu), dzięki której Użytkownik nie musi
+                                na każdej podstronie Serwisu ponownie wpisywać loginu i hasła;
+                                W ramach Serwisu stosowane są dwa zasadnicze rodzaje plików cookies: „sesyjne” (session
+                                cookies) oraz „stałe” (persistent cookies). Cookies „sesyjne” są plikami tymczasowymi,
+                                które przechowywane są w urządzeniu końcowym Użytkownika do czasu wylogowania,
+                                opuszczenia strony internetowej lub wyłączenia oprogramowania (przeglądarki
+                                internetowej). „Stałe” pliki cookies przechowywane są w urządzeniu końcowym Użytkownika
+                                przez czas określony w parametrach plików cookies lub do czasu ich usunięcia przez
+                                Użytkownika.
+                                </li><li>Informacje o możliwości i sposobach obsługi plików
+                                cookies dostępne są w ustawieniach oprogramowania (przeglądarki internetowej).
+                                Operator Kujona informuje, że ograniczenia stosowania plików cookies mogą wpłynąć na
+                                niektóre funkcjonalności dostępne na stronach internetowych Serwisu.
+                                Pliki cookies zamieszczane w urządzeniu końcowym Kujona i wykorzystywane
+                                mogą być również przez współpracujących z Operatorem reklamodawców oraz
+                                partnerów.
+                                </li>
                         </div>
-
 
                         <h2>IX. POSTANOWIENIA KOŃCOWE</h2>
                         <ol>
-                            <li>Kujon jest upoważniona do dokonywania zmian w niniejszej Umowie w dowolnym momencie.
-                                Jako użytkownik, zostaniesz poinformowany o zmianach z co najmniej 7 dniowym
+                            <li>Kujon jest upoważniona do dokonywania zmian w niniejszej Umowie i Politce prywatności w
+                                dowolnym momencie. Jako użytkownik, zostaniesz poinformowany o zmianach z co najmniej 7 dniowym
                                 wyprzedzeniem. W przypadku braku zgody na proponowane zmiany, masz prawo do zerwania
                                 niniejszej Umowy.
                             </li>
