--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,7 +13,7 @@
 
 
     <link href="/static/css/main.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="shortcut icon" href="/static/favicon-blue.ico">
 
     <link rel="stylesheet" href="/static/bower_components/fullcalendar/dist/fullcalendar.min.css"/>
 
@@ -47,8 +47,9 @@
 <footer class="footer">
   <div class="container text-center">
       <p class="text-muted">
-            {{PROJECT_TITLE}} © 2016 |
-            <a href="#disclaimer">regulamin </a> |
+
+            <img src="/static/favicon-grey.ico" height="18px"> Kujon.mobi |
+            <a href="#disclaimer">regulamin i polityka prywatności </a> |
             <a href="mailto:kujon@kujon.mobi"><i class="fa fa-envelope"></i></a> |
             <a href="https://facebook.com/kujon.mobi"><i class="fa fa-facebook"></i></a> |
           <a href="https://play.google.com/store/apps/details?id=mobi.kujon"><i class="fa fa-android"></i></a> |
