--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -9,8 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#home">{{PROJECT_TITLE}}
-                <small>beta</small>
+            <a class="navbar-brand" href="#home"><img src="/static/img/logo.png">
             </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
