--- a/web/static/templates/register.html
+++ b/web/static/templates/register.html
@@ -9,10 +9,11 @@
 
 
         {{#data}}
-        <div class="col-md-2 col-xs-4  thumb" >
-            <a class="thumbnail user-register-form" href="#" data-usosId="{{usos_id}}">
+        <div class="col-md-2 col-sm-4 col-xs-6 text-center" >
+            <a class="user-register-form col-sm-12" href="#" data-usosId="{{usos_id}}">
                 <img class="img-responsive" src="{{logo}}" alt="{{name}}">
-                <div class="caption"><strong>{{name}}</strong></div>
+                <br>
+                <div class="small">{{name}}</div>
             </a>
         </div>
         {{/data}}
